# sebastian

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
apps/: manage.py
apps/apps/: settings.py  urls.py  wsgi.py
apps/books/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/books/migrations/: 0001_initial.py
apps/commutes/: admin.py  appmodels.py  apps.py  forms.py  interactors.py  messengers.py  models.py  repositories.py  tests.py  urls.py  utils.py  views.py
apps/commutes/migrations/: 0001_initial.py  0002_commute_user.py  0003_commute_usage_text.py
apps/dashboards/: urls.py  views.py
apps/templates/: _base.html  home.html  index.html  login.html  signup.html
apps/templates/_components/: commute_edit_form.html  commute_register_form.html  commutes_table.html  navbar.html  purchases_table.html
apps/templates/books/: list.html  purchase.html
apps/templates/commutes/: delete.html  edit.html  list.html  register.html
apps/templates/dashboards/: dashboard.html
apps/templates/users/: login.html  signup.html
apps/users/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
