[tool.poetry]
name = "sebastian"
version = "0.1.0"
description = "\"Yes, my lord.\""
authors = ["kk6 <hiro.ashiya@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^2.2"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
pre-commit = "^1.20"
tox = "^3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
